--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">Bloquery</string>
     <string name="action_settings">Settings</string>
 
+    <string name="action_logout">Log Out</string>
     <string name="username">Username</string>
     <string name="password">Password</string>
     <string name="login_button">Login</string>
